Fixed background not covering everything on homepage

--- a/assets/css/dynamic.css
+++ b/assets/css/dynamic.css
@@ -12,6 +12,7 @@
 				margin-left: 10%;
 				background-color: #151515;
                 position: absolute;
+                min-height: 100%;
 			}
 			h4 {
 				margin-top: 5px;
@@ -59,6 +60,7 @@
   				padding-left:60px;
 				margin-bottom: 80px;
 			}
+
 			.text {
 				max-width: 700px;
 			}
